--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Stylus</title><link rel="stylesheet" href="main.css"></head><body><h1>Stylus</h1><p class="tagline"><em class="expressive">Expressive, </em><em class="dynamic">dynamic, </em><em class="robust">robust </em><em class="css">CSS</em></p><div id="ribbon"><a href="http://github.com/learnboost/stylus">Fork me on GitHub</a></div><div id="content"><div id="example"><pre id="stylus">border-radius(args...)
+<!DOCTYPE html><html><head><title>Stylus</title><link rel="stylesheet" href="main.css"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body><h1>Stylus</h1><p class="tagline"><em class="expressive">Expressive, </em><em class="dynamic">dynamic, </em><em class="robust">robust </em><em class="css">CSS</em></p><div id="ribbon"><a href="http://github.com/learnboost/stylus">Fork me on GitHub</a></div><div id="content"><div id="example"><pre id="stylus">border-radius(args...)
   -webkit-border-radius args
   -moz-border-radius args
   border-radius args
@@ -11,7 +11,7 @@ body
  
 a.button
   border-radius 5px
-</pre><pre id="css">body {
+</pre><div id="arrow">➡</div><pre id="css">body {
   font: 12px Helvetica, Arial, sans-serif;
 }
 a.button {
