--- a/index.html
+++ b/index.html
@@ -19,4 +19,24 @@ a.button
   -webkit-border-radius 5px
   -moz-border-radius 5px
   border-radius 5px
+</pre></div><div class="example"><h2>Want DRY stylesheets?</h2><pre>border-radius(args...)
+  -webkit-border-radius args
+  -moz-border-radius args
+  border-radius args
+ 
+body
+  font 12px Helvetica, Arial, sans-serif
+ 
+a.button
+  border-radius(5px)
+</pre></div><div class="example"><h2>How about transparent mixins?</h2><pre>border-radius(args...)
+  -webkit-border-radius args
+  -moz-border-radius args
+  border-radius args
+ 
+body
+  font 12px Helvetica, Arial, sans-serif
+ 
+a.button
+  border-radius 5px
 </pre></div></div></div></body></html>
