--- a/index.html
+++ b/index.html
@@ -39,4 +39,9 @@ body
  
 a.button
   border-radius 5px
-</pre></div></div></div></body></html>
+</pre></div><div class="example closing"><h2>Get styling with Stylus</h2><p>If you want an expressive css language for nodejs with these
+features or the features listed below, head over to
+<a href="http://github.com/learnboost/stylus">GitHub
+
+</a>for more information.
+</p><div class="features"><h3>Features</h3><ul><li>Variables              </li><li>Mixins</li><li>Arithmetic</li><li>Type coercion</li><li>Dynamic importing</li><li>Conditionals</li><li>Iteration</li><li>Nested selectors</li><li>Parent referencing</li><li>Built-in functions (over 25)</li><li>In-language functions</li><li>Optional compression</li><li>Optional image inlining</li><li>Stylus executable</li><li>Robust error reporting</li><li>Single-line and multi-line comments</li><li>CSS literal for those tricky times</li><li>Character escaping</li><li>TextMate bundle</li><li>and more!</li></ul></div></div></div></div></body></html>
