--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html><html><head><title>Stylus</title><link rel="stylesheet" href="main.css"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body><div id="container"><h1>Stylus</h1><p class="tagline"><em class="expressive">Expressive, </em><em class="dynamic">dynamic, </em><em class="robust">robust </em><em class="css">CSS</em></p><div id="ribbon"><a href="http://github.com/learnboost/stylus">Fork me on GitHub</a></div><div id="content"><div class="example"><h2>What if we could omit braces?</h2><pre>body
+<!DOCTYPE html><html><head><title>Stylus</title><link rel="stylesheet" href="main.css"><meta http-equiv="Content-Type" content="text/html; charset=utf-8"></head><body><div id="container"><h1>Stylus</h1><p class="tagline"><em class="expressive">Expressive, </em><em class="dynamic">dynamic, </em><em class="robust">robust </em><em class="css">CSS</em></p><div id="ribbon"><a href="http://github.com/learnboost/stylus">Fork me on GitHub</a></div><div id="content"><div class="example"><h2>CSS needs a hero</h2><pre>body {
+  font: 12px Helvetica, Arial, sans-serif;
+}
+a.button {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+</pre></div><div class="example"><h2>What if we could omit braces?</h2><pre>body
   font: 12px Helvetica, Arial, sans-serif;
  
 a.button
@@ -19,7 +27,7 @@ a.button
   -webkit-border-radius 5px
   -moz-border-radius 5px
   border-radius 5px
-</pre></div><div class="example"><h2>Want DRY stylesheets?</h2><pre>border-radius(args...)
+</pre></div><div class="example"><h2>Keep things DRY</h2><pre>border-radius(args...)
   -webkit-border-radius args
   -moz-border-radius args
   border-radius args
@@ -33,6 +41,13 @@ a.button
   -webkit-border-radius args
   -moz-border-radius args
   border-radius args
+ 
+body
+  font 12px Helvetica, Arial, sans-serif
+ 
+a.button
+  border-radius 5px
+</pre></div><div class="example"><h2>Create &amp; Share</h2><pre>@import 'vendor'
  
 body
   font 12px Helvetica, Arial, sans-serif
