examples using arguments

--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@ a.button
   -webkit-border-radius 5px
   -moz-border-radius 5px
   border-radius 5px
-</pre></div><div class="example"><h2>Keep things DRY</h2><pre>border-radius(args...)
-  -webkit-border-radius args
-  -moz-border-radius args
-  border-radius args
+</pre></div><div class="example"><h2>Keep things DRY</h2><pre>border-radius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
  
 body
   font 12px Helvetica, Arial, sans-serif
  
 a.button
   border-radius(5px)
-</pre></div><div class="example"><h2>How about transparent mixins?</h2><pre>border-radius(args...)
-  -webkit-border-radius args
-  -moz-border-radius args
-  border-radius args
+</pre></div><div class="example"><h2>How about transparent mixins?</h2><pre>border-radius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
  
 body
   font 12px Helvetica, Arial, sans-serif
