npm install section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body
  
 a.button
   border-radius 5px
-</pre></div><div class="example closing"><h2>Get styling with Stylus</h2><p>If you want an expressive css language for nodejs with these
+</pre></div><div class="example closing"><h2>Get styling with Stylus</h2><pre class="terminal">$ npm install stylus</pre><p>If you want an expressive css language for nodejs with these
 features or the features listed below, head over to
 <a href="http://github.com/learnboost/stylus">GitHub
 
