--- a/index.html
+++ b/index.html
@@ -54,7 +54,30 @@ body
  
 a.button
   border-radius 5px
-</pre></div><div class="example closing"><h2>Get styling with Stylus</h2><pre class="terminal">$ npm install stylus</pre><p>If you want an expressive css language for nodejs with these
+</pre></div><div class="example"><h2>What if we had powerful in-language functions?opposite-position(pos)
+  if pos == top
+    bottom
+  else if pos == bottom
+    top
+  else if pos == left
+    right
+  else if pos == right
+    left
+  else
+    error('Invalid position ' + pos)
+ 
+opposite(positions)
+  for pos in positions
+    pos = opposite-position(pos)
+    ret = ret is defined ? ret pos : pos
+ 
+opposite(top)
+// => bottom
+opposite(left)
+// => right
+opposite(top left)
+// => bottom right
+</h2></div><div class="example closing"><h2>Get styling with Stylus</h2><pre class="terminal">$ npm install stylus</pre><p>If you want an expressive css language for nodejs with these
 features or the features listed below, head over to
 <a href="http://github.com/learnboost/stylus">GitHub
 
