--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@ opposite(left)
  
 opposite(top left)
 // => bottom right
+</pre></div><div class="example"><h2>What if it were all optional?</h2><pre>fonts = helvetica, arial, sans-serif
+ 
+body {
+  padding: 50px;
+  font: 14px/1.4 fonts;
+}
 </pre></div><div class="example closing"><h2>Get styling with Stylus</h2><pre class="terminal">$ npm install stylus</pre><p>If you want an expressive css language for nodejs with these
 features or the features listed below, head over to
 <a href="http://github.com/learnboost/stylus">GitHub
