--- a/try.html
+++ b/try.html
@@ -26,8 +26,7 @@ body {
 }
 </textarea><textarea class="css"></textarea></div><div class="example"><h2>Transparent mixins</h2><p>Transparent mixins are unique to Stylus,
 and are a incredibly powerful way enhance your stylesheets. Here all the arguments
-passed are simply assigned to three properties. Stylus knows not to recursively
-invoke the border-radius() mixin.
+passed are simply assigned to three properties.
 </p><textarea class="stylus">border-radius()
   -webkit-border-radius: arguments
   -moz-border-radius: arguments
@@ -39,14 +38,25 @@ body {
     border-radius: 5px 10px;
   }
 }
-</textarea><textarea class="css"></textarea></div><div class="example"><p>Stylus property access provides easy access to values defined within the current block.</p><textarea class="stylus">#prompt
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Variables</h2><p>Stylus variables behave as you would expect in any other language,
+and may optionally be prefixed by the "$" character:
+</p><textarea class="stylus">#prompt
+  position: absolute
+  top: 150px
+  left: 50%
+  width: w = 200px
+  margin-left: -(w / 2)
+
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Block property access</h2><p>Stylus property access provides easy access to values
+defined within the current block.
+</p><textarea class="stylus">#prompt
   position: absolute
   top: 150px
   left: 50%
   width: 200px
   margin-left: -(@width / 2)
 
-</textarea><textarea class="css"></textarea></div><div class="example"><p>Stylus is not just a pre-processor,
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Robust full-featured language</h2><p>Stylus is not just a pre-processor,
 it's is a flexible and powerful language. Combined with
 the concept of transparent mixins you can create robust
 cross-browser support, or simply making your life easier
