--- a/try.html
+++ b/try.html
@@ -94,11 +94,28 @@ fixed()
 #logo
   fixed: top left
 
-</textarea><textarea class="css"></textarea></div><div class="example"><h2>Interpolation</h2><p>Interpolation</p><textarea class="stylus">table
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Iteration</h2><p>List iteration with Stylus is simple:</p><textarea class="stylus">table
   for row in 1 2 3 4 5
     tr:nth-child({row})
       height: 10px * row
 
 
+
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Interpolation</h2><p>Interpolation combined with other powerful Stylus features
+allow you to mold properties and selectors all within
+the language itself.
+
+</p><textarea class="stylus">vendors = webkit moz o ms official
+
+border-radius()
+  for vendor in vendors
+    if vendor == official
+      border-radius: arguments
+    else
+      -{vendor}-border-radius: arguments
+
+
+#content
+  border-radius: 5px
 
 </textarea><textarea class="css"></textarea></div></div></div></body></html>
