--- a/try.html
+++ b/try.html
@@ -101,7 +101,7 @@ fixed()
 
 
 
-</textarea><textarea class="css"></textarea></div><div class="example"><h2>Interpolation</h2><p>Interpolation combined with other powerful Stylus features
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Interpolation</h2><p>Interpolation combined with other powerful features
 allow you to mold properties and selectors all within
 the language itself.
 
