--- a/try.html
+++ b/try.html
@@ -118,4 +118,34 @@ border-radius()
 #content
   border-radius: 5px
 
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Operators</h2><p>Stylus supports all the typical operators you've come to
+expect from a language, as well as some specific to Stylus.
+
+</p><textarea class="stylus">body
+  foo: 5px + 10
+  foo: 2 ** 8
+  foo: 5px * 2
+  foo: !!''
+  foo: foo and bar and baz
+  foo: foo or bar or baz
+  foo: 1..5
+  foo: 1...5
+  foo: foo is true
+  foo: (1 2 3) == (1 2 3)
+  foo: (1 2 3) == (1 2)
+  foo: ((one 1) (two 2)) == ((one 1) (two 2)) 
+  foo: ((one 1) (two 2)) == ((one 1) (two)) 
+  foo: ((one 1) (two 2))[0]
+
+
+</textarea><textarea class="css"></textarea><p>Type coercion is performed when appropriate:
+
+</p><textarea class="stylus">body
+  foo: foo + bar
+  foo: 'foo ' + bar
+  foo: 'foo ' + 'bar'
+  foo: 'foo ' + 5px
+  foo: 2s - 500ms
+
+
 </textarea><textarea class="css"></textarea></div></div></div></body></html>
