--- a/try.html
+++ b/try.html
@@ -118,7 +118,7 @@ border-radius()
 #content
   border-radius: 5px
 
-</textarea><textarea class="css"></textarea></div><div class="example"><h2>Operators</h2><p>Stylus supports all the typical operators you've come to
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Operators</h2><p>Stylus supports all the <a href="docs/operators.html">operators</a> you've come to
 expect from a language, as well as some specific to Stylus.
 
 </p><textarea class="stylus">body
@@ -130,12 +130,12 @@ expect from a language, as well as some specific to Stylus.
   foo: foo or bar or baz
   foo: 1..5
   foo: 1...5
-  foo: foo is true
   foo: (1 2 3) == (1 2 3)
   foo: (1 2 3) == (1 2)
   foo: ((one 1) (two 2)) == ((one 1) (two 2)) 
   foo: ((one 1) (two 2)) == ((one 1) (two)) 
   foo: ((one 1) (two 2))[0]
+  foo: 3 in (1 2 3 4)
 
 
 </textarea><textarea class="css"></textarea><p>Type coercion is performed when appropriate:
