--- a/try.html
+++ b/try.html
@@ -162,4 +162,18 @@ hue with <em>deg</em>:
   foo: #cc0000 + 30deg
 
 
+</textarea><textarea class="css"></textarea></div><div class="example"><h2>Functions</h2><p>Stylus functions may be defined in the same manner as mixins,
+however their usage differs as they return values. For example
+you could define a sum function as shown below:
+
+</p><textarea class="stylus">sum(nums...)
+  n = 0
+  n += num for num in nums
+
+sum-function = sum
+
+body
+  foo: sum(1, 2, 3)
+  foo: sum-function(1, 2, 3, 4, 5, 6)
+
 </textarea><textarea class="css"></textarea></div></div></div></body></html>
