--- a/block.html
+++ b/block.html
@@ -3,40 +3,40 @@
   <li><a href="../try.html">Try Stylus Online!</a></li>
   </ul><div id="content">
 
-<h2 id="keyword-arguments">Keyword Arguments</h2>
+<h2 id="block">@block</h2>
 
-<p>Stylus supports keyword arguments, or &#8220;kwargs&#8221;. These allow you to reference arguents by their associated parameter name.</p>
+<p>You can assign any block of code in Stylus to a variable and then call it, pass as an argument or reuse in any other way.</p>
 
-<p>The examples shown below are functionally equivalent. However, we can
- place keyword arguments anywhere within the list. The remaining arguments
- that are <em>not</em> keyed will be applied to the parameters that have not
- been satisfied.</p>
+<p>To define a block, either write it down with an increased indent after an assign sign:</p>
 
-<pre><code>  body {
-    color: rgba(255, 200, 100, 0.5);
-    color: rgba(red: 255, green: 200, blue: 100, alpha: 0.5);
-    color: rgba(alpha: 0.5, blue: 100, red: 255, 200);
-    color: rgba(alpha: 0.5, blue: 100, 255, 200);
-  }
+<pre><code>foo =
+  width: 20px
+  height: 20px
 </code></pre>
 
-<p>Yielding:</p>
+<p>or use a curly braces syntax with <code>@block</code> keyword:</p>
 
-<pre><code>   body {
-     color: rgba(255,200,100,0.5);
-     color: rgba(255,200,100,0.5);
-     color: rgba(255,200,100,0.5);
-     color: rgba(255,200,100,0.5);
-   }
+<pre><code>foo = @block {
+  width: 20px
+  height: 20px
+}
 </code></pre>
 
-<p>To see what parameters a function or mixin accept, use the <code>p()</code> function:</p>
+<p>if you would like to render this block anywhere, you could call this variable inside an interpolation, so</p>
 
-<pre><code>p(rgba)
+<pre><code>.icon
+  {foo}
 </code></pre>
 
-<p>Yielding:</p>
+<p>would render to</p>
 
-<pre><code>inspect: rgba(red, green, blue, alpha)
+<pre><code>.icon {
+  width: 20px;
+  height: 20px;
+}
 </code></pre>
+
+<p>BTW, this is the same way you can use the blocks passed to the <a href="mixins.html#block-mixins">block mixins</a>.</p>
+
+<p>Right now you can only pass the variable as any other variable and render it inside an interpolation. In future we would provide more ways of handling it.</p>
 </div></div></body></html>
