Fixed a few issues in try.html

--- a/try/try.html
+++ b/try/try.html
@@ -32,7 +32,7 @@ partials_no_ids: true
             <div id="try">
                 <h2>Title</h2>
                 <p>Description</p>
-                <div><textarea class="stylus"></textarea>
+                <textarea class="stylus"></textarea>
                 <textarea class="css"></textarea>
                 <p class="clearfix buttons">
                     <a id="prev" href="#" class="minimal">prev</a>
