--- a/try/try.html
+++ b/try/try.html
@@ -10,8 +10,8 @@ partials_no_ids: true
 
     <title>Stylus</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="try/try.css"/>
-    <link rel="stylesheet" href="try/codemirror.css"/>
+    <link rel="stylesheet" href="../s/try.css"/>
+    <link rel="stylesheet" href="../s/codemirror.css"/>
     <script src="try/jquery.js"></script>
     <script src="try/stylus.min.js"></script>
     <script src="try/codemirror.js"></script>
